# refactor_auto_classifier

./: .gitignore  CHECKPOINT_STAGE2_2026-02-18.md  CLAUDE.md  pyproject.toml
lib/classifier/: pyproject.toml
lib/classifier/src/classifier/: __init__.py
lib/classifier/src/classifier/draft_classifier/: __init__.py  dynamic_schema.py  models.py  orchestrator.py  prompt_loader.py  prompt_manager_generic.py
lib/classifier/src/classifier/utils/: __init__.py  data_io.py  hierarchy_navigator.py  json_hierarchy_builder.py  shorthand_updater.py
svc/classification/: pyproject.toml
svc/classification/classification/: CHECKPOINT.md  export_prompts_to_yaml.py  run_classification.py  test_loader.py  workflow_prompts.py
svc/classification/classification/preview_prompts/stage_1/: category_prompt_prompt.py
svc/classification/classification/preview_prompts/stage_2/: client_perceptions_prompt.py  content_learning_prompt.py  event_tech_prompt.py  people_community_prompt.py  venue_hospitality_prompt.py
svc/classification/classification/utils/: add_ready_flag_to_existing.py  check_required_yamls.py  generate_skeleton_yamls.py  preview_prompts.py
svc/preprocessing/: pyproject.toml
svc/preprocessing/preprocessing/: format_definition_file_to_json_schema.py
